[package]
name = "papago-image-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
hmac = "0.12.1"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["json", "multipart", "stream"]}
serde = "1"
serde_derive = "1"
sha1 = "0.10.1"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7.3"
uuid = {version = "1.1.2", features = ["v4", "fast-rng"]}

[profile.release]
strip = true
