[package]
name = "yanzhu-translator"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
hmac = "0.12.1"
lazy_static = "1.4.0"
reqwest = {version = "0.11.22", features = ["json", "multipart", "stream"]}
serde = "1.0.192"
serde_derive = "1.0.192"
sha1 = "0.10.6"
tokio = {version = "1.34.0", features = ["full"]}
tokio-util = "0.7.10"
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}
image = "0.24.7"

[profile.release]
strip = true
